// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/SearchInput Basic 1`] = `
<label
  className="psds-text-input psds-searchinput"
>
  <div
    className="psds-text-input__label psds-theme--dark psds-text-input__label"
  >
    The label
  </div>
  <div
    className="psds-text-input__field-container"
  >
    <div
      className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus"
    >
      <div
        className="psds-text-input__field psds-text-input__field--appearance-subtle psds-theme--dark psds-text-input__field--w-after psds-text-input__field--icon-align-left"
      >
        <input
          className="psds-theme--dark psds-text-input__field-input--appearance-subtle psds-text-input__field-input"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Some placeholder"
          type="search"
          value=""
        />
        <button
          className="psds-button psds-button--layout-inline psds-button--size-small psds-button--appearance-flat psds-theme--dark psds-button--icon-only psds-searchinput-clear"
          disabled={false}
          onClick={[Function]}
        >
          <div
            className="psds-button__icon psds-button__icon--icon-align-left psds-button__icon--size-small psds-button__icon--icon-only"
          >
            <div
              className="psds-icon psds-icon--size-small psds-icon--color-undefined"
            >
              <svg
                aria-label="close icon"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  d="M17.646 7.056l-.702-.702a.5.5 0 00-.708 0L12 10.59 7.764 6.354a.5.5 0 00-.708 0l-.702.702a.5.5 0 000 .708L10.59 12l-4.236 4.236a.5.5 0 000 .707l.702.703a.5.5 0 00.708 0L12 13.41l4.236 4.236a.5.5 0 00.708 0l.702-.703a.5.5 0 000-.707L13.41 12l4.236-4.236a.5.5 0 000-.708z"
                />
              </svg>
            </div>
          </div>
          <span
            aria-hidden={false}
            className="psds-button__text"
          />
        </button>
      </div>
    </div>
    <div
      className="psds-text-input__icon psds-theme--dark psds-text-input__icon--icon-align-left psds-text-input__icon--appearance-subtle psds-text-input__icon"
    >
      <div
        className="psds-icon psds-icon--size-medium psds-icon--color-undefined"
      >
        <svg
          aria-label="search icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            clipRule="evenodd"
            d="M21.353 20.648a.5.5 0 000-.708l-5.039-5.04A7.928 7.928 0 0018 10a7.948 7.948 0 00-2.344-5.656A7.942 7.942 0 0010 2a7.94 7.94 0 00-5.656 2.344A7.944 7.944 0 002 10a7.94 7.94 0 002.344 5.656A7.94 7.94 0 0010 18a7.926 7.926 0 004.9-1.685l5.04 5.04a.5.5 0 00.707 0l.706-.707zm-7.111-6.405A5.96 5.96 0 0110 16a5.959 5.959 0 01-4.242-1.757A5.958 5.958 0 014 10c0-1.602.624-3.109 1.758-4.242A5.955 5.955 0 0110 4c1.602 0 3.109.624 4.242 1.758A5.957 5.957 0 0116 10c0 1.603-.624 3.11-1.758 4.243z"
            fillRule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    className="psds-text-input__sub-label psds-theme--dark"
  >
    The sub label
  </div>
</label>
`;

exports[`Storyshots Components/SearchInput Loading 1`] = `
<label
  className="psds-text-input psds-searchinput"
>
  <div
    className="psds-text-input__field-container"
  >
    <div
      className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus"
    >
      <div
        className="psds-text-input__field psds-text-input__field--appearance-subtle psds-theme--dark psds-text-input__field--w-after psds-text-input__field--icon-align-left"
      >
        <input
          className="psds-theme--dark psds-text-input__field-input--appearance-subtle psds-text-input__field-input"
          disabled={false}
          onChange={[Function]}
          type="search"
          value=""
        />
        <button
          className="psds-button psds-button--layout-inline psds-button--size-small psds-button--appearance-flat psds-theme--dark psds-button--icon-only psds-searchinput-clear"
          disabled={false}
          onClick={[Function]}
        >
          <div
            className="psds-button__icon psds-button__icon--icon-align-left psds-button__icon--size-small psds-button__icon--icon-only"
          >
            <div
              className="psds-icon psds-icon--size-small psds-icon--color-undefined"
            >
              <svg
                aria-label="close icon"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  d="M17.646 7.056l-.702-.702a.5.5 0 00-.708 0L12 10.59 7.764 6.354a.5.5 0 00-.708 0l-.702.702a.5.5 0 000 .708L10.59 12l-4.236 4.236a.5.5 0 000 .707l.702.703a.5.5 0 00.708 0L12 13.41l4.236 4.236a.5.5 0 00.708 0l.702-.703a.5.5 0 000-.707L13.41 12l4.236-4.236a.5.5 0 000-.708z"
                />
              </svg>
            </div>
          </div>
          <span
            aria-hidden={false}
            className="psds-button__text"
          />
        </button>
      </div>
    </div>
    <div
      className="psds-text-input__icon psds-theme--dark psds-text-input__icon--icon-align-left psds-text-input__icon--appearance-subtle psds-text-input__icon"
    >
      <div
        aria-busy="true"
        aria-label="Loading"
        className="psds-circularprogress--size-small"
        role="progressbar"
      >
        <svg
          className="psds-circularprogress__svg psds-circularprogress__svg--no-value"
          version="1.1"
          viewBox="0 0 48 48"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            className="psds-circularprogress__bg psds-theme--dark"
            cx="24"
            cy="24"
            r={22}
          />
          <circle
            className="psds-circularprogress__fg psds-circularprogress__fg psds-theme--dark"
            cx="24"
            cy="24"
            r={22}
            strokeDasharray="138.23007675795088 138.23007675795088"
            strokeDashoffset={103.67255756846316}
          />
        </svg>
      </div>
    </div>
  </div>
</label>
`;

exports[`Storyshots Components/SearchInput No On Clear 1`] = `
<label
  className="psds-text-input psds-searchinput"
>
  <div
    className="psds-text-input__field-container"
  >
    <div
      className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus"
    >
      <div
        className="psds-text-input__field psds-text-input__field--appearance-subtle psds-theme--dark psds-text-input__field--icon-align-left"
      >
        <input
          className="psds-theme--dark psds-text-input__field-input--appearance-subtle psds-text-input__field-input"
          disabled={false}
          onChange={[Function]}
          type="search"
          value=""
        />
      </div>
    </div>
    <div
      className="psds-text-input__icon psds-theme--dark psds-text-input__icon--icon-align-left psds-text-input__icon--appearance-subtle psds-text-input__icon"
    >
      <div
        className="psds-icon psds-icon--size-medium psds-icon--color-undefined"
      >
        <svg
          aria-label="search icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            clipRule="evenodd"
            d="M21.353 20.648a.5.5 0 000-.708l-5.039-5.04A7.928 7.928 0 0018 10a7.948 7.948 0 00-2.344-5.656A7.942 7.942 0 0010 2a7.94 7.94 0 00-5.656 2.344A7.944 7.944 0 002 10a7.94 7.94 0 002.344 5.656A7.94 7.94 0 0010 18a7.926 7.926 0 004.9-1.685l5.04 5.04a.5.5 0 00.707 0l.706-.707zm-7.111-6.405A5.96 5.96 0 0110 16a5.959 5.959 0 01-4.242-1.757A5.958 5.958 0 014 10c0-1.602.624-3.109 1.758-4.242A5.955 5.955 0 0110 4c1.602 0 3.109.624 4.242 1.758A5.957 5.957 0 0116 10c0 1.603-.624 3.11-1.758 4.243z"
            fillRule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
</label>
`;

exports[`Storyshots Components/SearchInput Static Value 1`] = `
<label
  className="psds-text-input psds-searchinput"
>
  <div
    className="psds-text-input__field-container"
  >
    <div
      className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus"
    >
      <div
        className="psds-text-input__field psds-text-input__field--appearance-subtle psds-theme--dark psds-text-input__field--w-after psds-text-input__field--icon-align-left"
      >
        <input
          className="psds-theme--dark psds-text-input__field-input--appearance-subtle psds-text-input__field-input"
          disabled={false}
          onChange={[Function]}
          type="search"
          value="Set, not updated with state"
        />
        <button
          className="psds-button psds-button--layout-inline psds-button--size-small psds-button--appearance-flat psds-theme--dark psds-button--icon-only psds-searchinput-clear psds-searchinput-clear--visible"
          disabled={false}
          onClick={[Function]}
        >
          <div
            className="psds-button__icon psds-button__icon--icon-align-left psds-button__icon--size-small psds-button__icon--icon-only"
          >
            <div
              className="psds-icon psds-icon--size-small psds-icon--color-undefined"
            >
              <svg
                aria-label="close icon"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  d="M17.646 7.056l-.702-.702a.5.5 0 00-.708 0L12 10.59 7.764 6.354a.5.5 0 00-.708 0l-.702.702a.5.5 0 000 .708L10.59 12l-4.236 4.236a.5.5 0 000 .707l.702.703a.5.5 0 00.708 0L12 13.41l4.236 4.236a.5.5 0 00.708 0l.702-.703a.5.5 0 000-.707L13.41 12l4.236-4.236a.5.5 0 000-.708z"
                />
              </svg>
            </div>
          </div>
          <span
            aria-hidden={false}
            className="psds-button__text"
          />
        </button>
      </div>
    </div>
    <div
      className="psds-text-input__icon psds-theme--dark psds-text-input__icon--icon-align-left psds-text-input__icon--appearance-subtle psds-text-input__icon"
    >
      <div
        className="psds-icon psds-icon--size-medium psds-icon--color-undefined"
      >
        <svg
          aria-label="search icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            clipRule="evenodd"
            d="M21.353 20.648a.5.5 0 000-.708l-5.039-5.04A7.928 7.928 0 0018 10a7.948 7.948 0 00-2.344-5.656A7.942 7.942 0 0010 2a7.94 7.94 0 00-5.656 2.344A7.944 7.944 0 002 10a7.94 7.94 0 002.344 5.656A7.94 7.94 0 0010 18a7.926 7.926 0 004.9-1.685l5.04 5.04a.5.5 0 00.707 0l.706-.707zm-7.111-6.405A5.96 5.96 0 0110 16a5.959 5.959 0 01-4.242-1.757A5.958 5.958 0 014 10c0-1.602.624-3.109 1.758-4.242A5.955 5.955 0 0110 4c1.602 0 3.109.624 4.242 1.758A5.957 5.957 0 0116 10c0 1.603-.624 3.11-1.758 4.243z"
            fillRule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
</label>
`;
